Tests/Should_fail/pattern1.int
let t1 = fn () -> return 3
let t2 = t1 3
